--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -86,7 +86,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tutorial.clTexture.Main
+main.class=tutorial.clTexture3d.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
